--- a/app/src/main/res/layout/add_exercise_layout.xml
+++ b/app/src/main/res/layout/add_exercise_layout.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.mainactivity.home.ViewSchedule">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/exerciseTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -44,6 +44,6 @@
         android:paddingBottom="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
