--- a/app/src/main/res/layout/complete_schedule_layout.xml
+++ b/app/src/main/res/layout/complete_schedule_layout.xml
@@ -67,7 +67,7 @@
         app:layout_constraintVertical_bias="0.535" />
 
     <EditText
-        android:id="@+id/title"
+        android:id="@+id/exerciseTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
