--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/settings"
-        android:title="@string/title_settings" />
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search" />
 
     <item
         android:id="@+id/navigation_premium"
-        android:icon="@drawable/star"
-        android:title="@string/title_premium" />
+        android:icon="@drawable/schedule_orange"
+        android:title="Suggested schedules" />
 
 </menu>
