--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -45,7 +45,7 @@
         android:drawableLeft="@drawable/ic_search_black_24dp"
         android:ems="10"
         android:fontFamily="@font/seguisb"
-        android:hint="Search..."
+        android:hint="Search for user or schedule.."
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
