--- a/app/src/main/res/layout/user_page_layout.xml
+++ b/app/src/main/res/layout/user_page_layout.xml
@@ -46,7 +46,8 @@
             android:layout_alignParentRight="true"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            android:src="@drawable/default_image" />
+            android:src="@drawable/default_image"
+            android:clickable="true"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -209,24 +210,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_edit_profile"
-        android:layout_width="216dp"
-        android:layout_height="46dp"
-        android:background="@drawable/custom_login_button"
-        android:fontFamily="@font/seguisb"
-        android:text="Edit profile"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        app:backgroundTint="@color/white"
-        app:backgroundTintMode="multiply"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.932" />
-
     <TextView
         android:id="@+id/nickname"
         android:textAlignment="center"
@@ -241,5 +224,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.227" />
+
+    <ImageView
+        android:id="@+id/edit_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintStart_toEndOf="@+id/user_name"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.595"
+        android:src="@drawable/ic_baseline_edit_24" />
+
+    <ImageView
+        android:id="@+id/edit_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toEndOf="@+id/nickname"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.233"
+        android:src="@drawable/ic_baseline_edit_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
