--- a/app/src/main/res/layout/user_schedule_layout.xml
+++ b/app/src/main/res/layout/user_schedule_layout.xml
@@ -65,6 +65,24 @@
                 android:text="Created by"
                 android:textSize="14sp"
                 android:textStyle="italic"
+                app:layout_constraintBottom_toTopOf="@+id/downloads"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
+
+            <TextView
+                android:id="@+id/downloads"
+                android:layout_width="206dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="52dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/seguisb"
+                android:maxLines="3"
+                android:text="0 Downloads"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
 
