--- a/app/src/main/res/layout/set_exercise_data_layout.xml
+++ b/app/src/main/res/layout/set_exercise_data_layout.xml
@@ -183,7 +183,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/done"
+        android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
