--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -100,6 +100,7 @@
             android:layout_marginTop="24dp"
             android:horizontalSpacing="4dp"
             android:listSelector="@android:color/transparent"
+            android:layoutAnimation="@anim/layout_animation_fall_down"
             android:numColumns="2"
             android:padding="0dp"
             android:verticalSpacing="4dp"
