--- a/app/src/main/res/layout/premium_fragment.xml
+++ b/app/src/main/res/layout/premium_fragment.xml
@@ -87,6 +87,7 @@ tools:context=".activities.mainactivity.premium.PremiumFragment">
         android:layout_marginTop="24dp"
         android:horizontalSpacing="4dp"
         android:listSelector="@android:color/transparent"
+        android:layoutAnimation="@anim/layout_animation_fall_down"
         android:numColumns="1"
         android:padding="0dp"
         android:verticalSpacing="4dp"
