--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_premium"
         android:icon="@drawable/schedule_orange"
-        android:title="Suggested schedules" />
+        android:title="Suggested" />
 
 </menu>
