--- a/app/src/main/res/layout/intro_layout_screen.xml
+++ b/app/src/main/res/layout/intro_layout_screen.xml
@@ -29,6 +29,7 @@
         android:id="@+id/intro_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
