--- a/app/src/main/res/layout/user_page_layout.xml
+++ b/app/src/main/res/layout/user_page_layout.xml
@@ -203,7 +203,7 @@
                     android:layout_below="@+id/schede_create_numero"
                     android:layout_centerInParent="true"
                     android:fontFamily="@font/seguisb"
-                    android:text="Personal schedules"
+                    android:text="Schedule created"
                     android:textSize="14dp" />
             </RelativeLayout>
 
@@ -230,7 +230,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/dumbell" />
+                    android:src="@drawable/ic_baseline_file_download_24" />
 
                 <TextView
                     android:id="@+id/schede_scaricate_numero"
@@ -249,7 +249,7 @@
                     android:layout_below="@+id/schede_scaricate_numero"
                     android:layout_centerInParent="true"
                     android:fontFamily="@font/seguisb"
-                    android:text="Trainings completed"
+                    android:text="Download from users"
                     android:textSize="14dp" />
             </RelativeLayout>
 
@@ -287,7 +287,7 @@
     <TextView
         android:id="@+id/nickname"
         android:textAlignment="center"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:fontFamily="@font/seguisb"
@@ -297,20 +297,21 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
+        app:layout_constraintVertical_bias="0.227"
+        android:gravity="center_horizontal" />
 
     <ImageView
         android:id="@+id/edit_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:src="@drawable/ic_baseline_edit_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toEndOf="@+id/user_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595"
-        android:src="@drawable/ic_baseline_edit_24" />
+        app:layout_constraintVertical_bias="0.564" />
 
     <ImageView
         android:id="@+id/edit_nickname"
